RESOLVED FIXED159080
[WK2] PageConfiguration.m_relatedPage keeps WebPageProxy alive after its WebView has been destroyed
https://bugs.webkit.org/show_bug.cgi?id=159080
Summary [WK2] PageConfiguration.m_relatedPage keeps WebPageProxy alive after its WebV...
Chris Dumez
Reported 2016-06-23 20:07:24 PDT
[WK2] PageConfiguration.m_relatedPage keeps WebPageProxy alive after its WebView has been destroyed. This leads to WebPageProxy object leaks when the client keeps using related views.
Attachments
Patch (5.89 KB, patch)
2016-06-23 20:11 PDT, Chris Dumez
no flags
Patch (1.88 KB, patch)
2016-06-23 21:48 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2016-06-23 20:07:39 PDT
Chris Dumez
Comment 2 2016-06-23 20:11:25 PDT
WebKit Commit Bot
Comment 3 2016-06-23 20:14:02 PDT
Attachment 281955 [details] did not pass style-queue: ERROR: Source/WTF/wtf/WeakPtr.h:95: Should be indented on a separate line, with the colon or comma first on that line. [whitespace/indent] [4] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 4 2016-06-23 20:32:31 PDT
Comment on attachment 281955 [details] Patch I think this would break compatibility - the related web view configuration property is not weak. How about just clearing out the page configuration's related page in ::close() ?
Chris Dumez
Comment 5 2016-06-23 20:38:40 PDT
(In reply to comment #4) > Comment on attachment 281955 [details] > Patch > > I think this would break compatibility - the related web view configuration > property is not weak. How about just clearing out the page configuration's > related page in ::close() ? Thanks for the suggestion. I'll give this a try. I think we would keep at most 1 extra WebPageProxy alive instead of a chain of them so this would be a big improvement.
Chris Dumez
Comment 6 2016-06-23 21:48:50 PDT
WebKit Commit Bot
Comment 7 2016-06-24 10:13:52 PDT
Comment on attachment 281958 [details] Patch Clearing flags on attachment: 281958 Committed r202426: <http://trac.webkit.org/changeset/202426>
WebKit Commit Bot
Comment 8 2016-06-24 10:13:58 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.